@@ -73,6 +73,8 @@ struct switch_record *switch_record_table __attribute__((weak_import));
 int switch_record_cnt __attribute__((weak_import));
 slurmdb_cluster_rec_t *working_cluster_rec  __attribute__((weak_import)) = NULL;
 void *acct_db_conn __attribute__((weak_import)) = NULL;
+bitstr_t *avail_node_bitmap __attribute__((weak_import)) = NULL;
+bitstr_t *up_node_bitmap __attribute__((weak_import)) = NULL;
 #else
 slurm_ctl_conf_t slurmctld_conf;
 struct node_record *node_record_table_ptr;
@@ -84,6 +86,8 @@ struct switch_record *switch_record_table;
 int switch_record_cnt;
 slurmdb_cluster_rec_t *working_cluster_rec = NULL;
 void *acct_db_conn = NULL;
+bitstr_t *avail_node_bitmap = NULL;
+bitstr_t *up_node_bitmap = NULL;
 #endif
 
 /*
